# dsmi

./: .gitignore  .gitmodules  README.md  meson.build
darwin/: images.qrc  settings.h
ds/demoapps/OSCexample/: Makefile
ds/demoapps/OSCexample/source/: arm9_main.c
ds/demoapps/dsmidikeyboard/: Makefile
ds/demoapps/dsmidikeyboard/source/: main.c
ds/demoapps/kaosds/: Makefile
ds/demoapps/kaosds/source/: main.c
ds/demoapps/pulseds/: Makefile
ds/demoapps/pulseds/arm7/: Makefile
ds/demoapps/pulseds/arm7/source/: arm7_main.c
ds/demoapps/pulseds/arm9/: Makefile
ds/demoapps/pulseds/arm9/source/: arm9_main.c
ds/demoapps/pulseds/tools/: calcfreqtable.py
ds/libdsmi/: Makefile  Makefile.blocks
ds/libdsmi/include/: libdsmi.h
ds/libdsmi/source/: dserial.c  libdsmi.c  usb_descriptors.c
windows/: icon.rc  images.qrc  midi2udp.cpp  midi2udp.h  midiports.cpp  midiports.h  settings.h
